<resources>
    <string name="app_name">mUzima</string>
    <string name="confirm_duplicate_form_data_save">Save Duplicate Form Data</string>
    <string name="confirm_patient_id_exists">Does the patient already have existing ID?</string>
    <string name="default_auto_save_interval">2</string>
    <string name="default_form_register">Registration Forms</string>
    <string name="default_server">http://demo2.muzima.org</string>
    <string name="error_action_allow">Action not allowed while sync is in progress</string>
    <string name="error_audio_chose_activity_find">Error: Activity for choosing audio not found</string>
    <string name="error_audio_play_activity_find">Error: Activity for playing audio not found</string>
    <string name="error_audio_record_activity_find">Error: Activity for recording audio not found</string>
    <string name="error_authentication_fail">Authentication failed</string>
    <string name="error_authentication_occur">Authentication error occurred</string>
    <string name="error_client_download">Could not download clients</string>
    <string name="error_cohort_download">Could not download cohorts</string>
    <string name="error_cohort_fetch">Something went wrong while fetching cohorts from local repo</string>
    <string name="error_cohort_load">Could not load cohorts</string>
    <string name="error_concept_download">Could not download concepts</string>
    <string name="error_concept_fetch">Something went wrong while fetching concepts from local repo</string>
    <string name="error_concept_parse">An error occurred while parsing concepts in the form</string>
    <string name="error_connection_data_download">Connection error occurred while downloading data
    </string>
    <string name="error_credential_invalid">Invalid Username, Password, Server combination.
    </string>
    <string name="error_data_download">An error occurred while downloading data form server</string>
    <string name="error_data_save">An error occurred while saving data to local repo</string>
    <string name="error_encounter_download">Could not download encounters</string>
    <string name="error_encounter_load">Encounters could not be loaded</string>
    <string name="error_encounter_observation_download">Could not download observations for patients</string>
    <string name="error_exception_data_load">Load exception has been thrown while loading data</string>
    <string name="error_exception_data_upload">Exception has been thrown while uploading data</string>
    <string name="error_form_download">Could not download forms</string>
    <string name="error_form_fetch">Something went wrong while fetching forms from local repo</string>
    <string name="error_form_load">Could not load forms</string>
    <string name="error_form_load_fail">Could not load form</string>
    <string name="error_form_location_load">An error occurred while loading locations for the form</string>
    <string name="error_form_patient_data_exist">There is existing form data for selected form(s).
        Finish Incomplete data and sync Complete data to Server first before downloading the forms.</string>
    <string name="error_form_provider_load">An error occurred while loading provider for the form</string>
    <string name="error_form_save">An error occurred while saving the form</string>
    <string name="error_form_templates_download">Could not download form templates</string>
    <string name="error_image_capture_activity_unavailable">Error: Application for capturing an image not found</string>
    <string name="error_image_chose_activity_unavailable">Error: Application for choosing image not found</string>
    <string name="error_image_view_activity_unavailable">Error: Application for viewing image not found</string>
    <string name="error_local_connection_unavailable">Network connection not found</string>
    <string name="error_local_repo_data_delete">An error occurred while deleting data from local repo</string>
    <string name="error_location_download">Could not download locations</string>
    <string name="error_location_fetch">Something went wrong while fetching locations from local repo</string>
    <string name="error_notification_download">Error downloading notifications</string>
    <string name="error_notification_fetch">Something went wrong while fetching notifications from local repo</string>
    <string name="error_observation_download">Could not download observations</string>
    <string name="error_observation_fetch">Something went wrong while fetching observations from local repo</string>
    <string name="error_observation_form_save">An error occurred while saving observations in the form</string>
    <string name="error_observation_load">Observations could not be loaded</string>
    <string name="error_observation_unavailable">No observations Available</string>
    <string name="error_parse_exception_data_fetch">Parse exception has been thrown while fetching data</string>
    <string name="error_patient_data_form_exist">There is existing form data.
        Finish Incomplete data and sync Complete data to Server first before syncing form templates.</string>
    <string name="error_patient_download">Could not download patients</string>
    <string name="error_patient_encounter_download">Could not download encounters for patients</string>
    <string name="error_patient_fetch">An error occurred while fetching patient</string>
    <string name="error_patient_repo_fetch">Something went wrong while fetching patients from local repo</string>
    <string name="error_patient_search">Something went wrong while searching patient(s)</string>
    <string name="error_provider_download">Could not download providers</string>
    <string name="error_provider_fetch">Something went wrong while fetching providers from local repo</string>
    <string name="error_server_connection_unavailable">Server unreachable</string>
    <string name="error_server_url_invalid">Invalid Server URL.</string>
    <string name="error_setup_configuration_download">Setup configurations could not be loaded</string>
    <string name="error_setup_configuration_template_download">Could not download Setup Configuration template</string>
    <string name="error_sync_not_allowed">Action not allowed while sync is in progress</string>
    <string name="error_tag_fetch">Something went wrong while fetching tags from local repo</string>
    <string name="error_target_application_find">No target applications</string>
    <string name="error_username_invalid_format">Invalid Character in Username. These are not allowed: %s
    </string>
    <string name="error_wizard_interrupted">Wizard was interrupted, please logout and run the wizard again.</string>
    <string name="general_accept">Accept</string>
    <string name="general_alert">Alert!</string>
    <string name="general_application_version">Version %1$s</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_caution">Caution!</string>
    <string name="general_client_register">Register client</string>
    <string name="general_clients">Clients</string>
    <string name="general_close">Close</string>
    <string name="general_cohorts">Cohorts</string>
    <string name="general_concepts">Concepts</string>
    <string name="general_delete">Delete</string>
    <string name="general_description_unavailable">No description available</string>
    <string name="general_download">Download</string>
    <string name="general_draft">Draft</string>
    <string name="general_encounters">Encounters</string>
    <string name="general_fail">Fail</string>
    <string name="general_form">Form</string>
    <string name="general_forms">Forms</string>
    <string name="general_help">Help</string>
    <string name="general_load">Load</string>
    <string name="general_locations">Locations</string>
    <string name="general_no">No</string>
    <string name="general_notices">Notices</string>
    <string name="general_notification">Notification</string>
    <string name="general_notifications">Notifications</string>
    <string name="general_observations">Observations</string>
    <string name="general_ok">Ok</string>
    <string name="general_password">Password</string>
    <string name="general_providers">Providers</string>
    <string name="general_save">Save</string>
    <string name="general_search">Search</string>
    <string name="general_server">Server</string>
    <string name="general_settings">Settings</string>
    <string name="general_tags">Tags</string>
    <string name="general_thank_you">Thank you!</string>
    <string name="general_upload">Upload</string>
    <string name="general_username">Username</string>
    <string name="general_view_encounter">View encounter</string>
    <string name="general_welcome">Welcome</string>
    <string name="general_yes">Yes</string>
    <string name="header_cohort_category">Cohort Settings</string>
    <string name="header_muzima_category">mUzima Settings</string>
    <string name="header_openmrs_category">OpenMRS Settings</string>
    <string name="header_provider_location_category">Provider/Location Settings</string>
    <string name="hint_advanced_setup">Use a step by step wizard to choose what you want</string>
    <string name="hint_audio_caption">Please enter a caption for the audio</string>
    <string name="hint_audio_record">Record or choose audio</string>
    <string name="hint_barcode_scanner_setup">You need a barcode scanner application to register clients from
        mobile. Please check whether it\'s been installed in your device or not.
    </string>
    <string name="hint_client_local_search">Your search includes client id, given name, middle name and family
        name and searched only in the device
    </string>
    <string name="hint_cohort_prefix_manage">Cohort prefixes restrict your cohort downloads to only those starting with the specified prefix</string>
    <string name="hint_default_encounter_provider">Logged-in user will be used as the default encounter provider</string>
    <string name="hint_duplicate_form_data_warning">Warn the user when duplicate form data for same client with same encounter date is being saved</string>
    <string name="hint_form_auto_save_interval">The value in which your forms will be automatically saved</string>
    <string name="hint_manage_concept">Get more concepts from the server or remove concepts from this device.
        Concepts are used to configure what observations to download.</string>
    <string name="hint_manage_location">Get more locations from the server or remove locations from this device</string>
    <string name="hint_manage_provider">Get more providers from the server or remove providers from this device</string>
    <string name="hint_real_time_sync">Enable real time synchronization of data</string>
    <string name="hint_server_password_prompt">Enter the OpenMRS password</string>
    <string name="hint_server_url_prompt">Please enter server URL</string>
    <string name="hint_session_timeout">If in-active for this time, mUzima will automatically logout</string>
    <string name="hint_username_prompt">Please enter username</string>
    <string name="title_cohort_prefix_manage">Manage cohort prefixes</string>
    <string name="title_default_encounter_provider">Default encounter provider</string>
    <string name="title_duplicate_form_data_warning">Duplicate form data warning</string>
    <string name="title_font_size">Font size</string>
    <string name="title_form_auto_save_interval">Automatic form save interval (mins)</string>
    <string name="title_manage_concept">Manage concepts</string>
    <string name="title_manage_location">Manage locations</string>
    <string name="title_manage_provider">Manage providers</string>
    <string name="title_real_time_sync">Real time sync</string>
    <string name="title_session_timeout">Session timeout (mins)</string>
</resources>